<resources>
    <string name="login">登陆</string>
    <string name="login_hint_username">请输入账号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_username_empty">账户不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_login_error">账户或密码错误</string>
    <string name="registered">注册</string>
    <string name="forget">忘记密码</string>
</resources>